<resources>
    <string name="app_name">MyFitnessApp</string>
    <string name="title_home">Home</string>
    <string name="title_progress">Progress</string>
    <string name="title_badges">Badges</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_name">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_weight">Weight (kg)</string>
    <string name="prompt_height">Height (cm)</string>
    <string name="prompt_step_count_target">Step Count Target (e.g. 5000)</string>
    <string name="hint_name">Username</string>
    <string name="button_register">Register</string>
    <string name="title_activity_step_counter">StepCounter</string>
</resources>
